# pyfx

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.beads/: metadata.json
.claude/: launch.json
.claude/agents/: security-reviewer.md
.claude/skills/add-feature/: SKILL.md
.claude/skills/checking-quality/: SKILL.md
.claude/skills/fix-issue/: SKILL.md
.claude/skills/livetrading-audit/: SKILL.md
.claude/skills/perf-sweep/: SKILL.md
.claude/skills/realism-audit/: SKILL.md
.claude/skills/research-journal/: SKILL.md
.claude/skills/to-master/: SKILL.md
.claude/skills/ux-audit/: SKILL.md
pyfx/: __init__.py  cli.py
pyfx-strategies-private/: README.md  pyproject.toml
pyfx-strategies-private/strategies/: ema_macd.py  rsi_trend.py
pyfx/adapters/: ib.py  instruments.py
pyfx/analysis/: comparison.py
pyfx/backtest/: runner.py
pyfx/core/: config.py  instruments.py  types.py
pyfx/data/: dukascopy.py  loader.py  resample.py  scanner.py
pyfx/live/: connection.py  events.py  risk.py  runner.py
pyfx/strategies/: base.py  coban_experimental.py  coban_reborn.py  loader.py  sample_sma.py
pyfx/web/dashboard/: models.py  services.py  urls.py  views.py
pyfx/web/dashboard/management/commands/: run_backtest.py  run_backtest_web.py  run_download_web.py  run_paper_web.py
pyfx/web/dashboard/migrations/: 0001_initial.py  0002_backtestrun_data_file_backtestrun_error_message_and_more.py  0003_backtestrun_extra_bar_types.py  0004_backtestrun_progress_message_and_more.py  0005_dataset.py  0006_papertradingsession_papertrade_risksnapshot_and_more.py  0007_alter_papertradingsession_instrument.py  0008_papertradingsession_client_id_and_more.py
pyfx/web/dashboard/templates/dashboard/: backtest_detail.html  backtest_list.html  backtest_new.html  base.html  comparison.html  dataset_list.html  dataset_new.html  overview.html  paper_detail.html  paper_list.html  paper_new.html  risk.html
pyfx/web/pyfx_web/: settings.py  urls.py
research/: README.md
research/coban_reborn/: journal.md
scripts/: coban_multi_pair.py  coban_sweep.py  money_maker_sweep.py  param_sensitivity.py  stress_test.py  walk_forward.py
tests/: conftest.py  test_cli.py  test_coban_experimental.py  test_coban_reborn.py  test_comparison.py  test_config.py  test_coverage_gaps.py  test_currency_conversion.py  test_ib_adapter.py  test_ib_instruments.py  test_ingest.py  test_instruments.py  test_live_cli.py  test_live_events.py  test_live_runner.py  test_live_types.py  test_loader.py  test_paper_services.py  test_resample.py  test_risk.py  test_run_backtest_cmd.py  test_runner.py  test_sample_strategy.py  test_scanner.py  test_web.py
