[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfx"
version = "0.1.0"
description = "Backtesting and live trading tool for forex and other instruments"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "nautilus_trader>=1.224.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "click>=8.0",
    "pandas>=2.0",
    "pandas-ta>=0.3.14b1",
]

[project.optional-dependencies]
web = [
    "django>=5.0",
    "djangorestframework>=3.15",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
all = ["pyfx[web,dev]"]

[project.scripts]
pyfx = "pyfx.cli:main"

[project.entry-points."pyfx.strategies"]
sample_sma = "pyfx.strategies.sample_sma:SMACrossStrategy"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.coverage.run]
branch = true
omit = ["*/migrations/*", "*/conftest.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "NOCOV",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = ".htmlcov"

[tool.pytest.ini_options]
testpaths = ["tests"]
