[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfx"
version = "0.1.0"
description = "Backtesting and live trading tool for forex and other instruments"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "nautilus_trader>=1.224.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "click>=8.0",
    "pandas>=2.0",
    "pandas-ta>=0.3.14b1",
]

[project.optional-dependencies]
web = [
    "django>=5.0",
    "djangorestframework>=3.15",
]
data = [
    "dukascopy-python>=4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-django>=4.5",
    "ruff>=0.4",
    "mypy>=1.10",
    "pandas-stubs>=3.0",
    "django-stubs>=5.0",
    "django-stubs-ext>=5.0",
]
all = ["pyfx[web,dev,data]"]

[project.scripts]
pyfx = "pyfx.cli:main"

[project.entry-points."pyfx.strategies"]
sample_sma = "pyfx.strategies.sample_sma:SMACrossStrategy"
coban_reborn = "pyfx.strategies.coban_reborn:CobanRebornStrategy"
coban_experimental = "pyfx.strategies.coban_experimental:CobanExperimentalStrategy"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "pyfx.web.pyfx_web.settings"

[[tool.mypy.overrides]]
module = "nautilus_trader.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyfx.web.dashboard.migrations.*"
ignore_errors = true

[tool.coverage.run]
branch = true
omit = ["*/migrations/*", "*/conftest.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "NOCOV",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
exclude_also = [
    "pragma: no branch",
]
partial_branches = [
    "pragma: no branch",
]

[tool.coverage.html]
directory = ".htmlcov"

[tool.pytest.ini_options]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "pyfx.web.pyfx_web.settings"
